--- a/vanilla-starlight/package.json
+++ b/vanilla-starlight/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/starlight": "^0.34.4",
     "astro": "^5.6.1",
+    "fast-glob": "^3.3.3",
     "sharp": "^0.34.2"
   }
 }
